feat: activation params per precursor + tolerance-based peak search
(1) Per-precursor activation params:
- org.mzpeak.model.Param: shared CV/user param record (extracted from FileMetadata);
  updated FooterMetadataReader/Writer/MzPeakFileInfo to use it
- CvTerms: CV accession constants (CID/HCD/ETD/COLLISION_ENERGY/...)
- Activation: record with List<Param>; methods() whitelists known dissociation accessions;
  collisionEnergy() guards NaN; summary() renders 'method @ N.n eV'
- Precursor gains activation field (backwards-compat 4-arg constructor preserved)
- ParquetGroups: groupList() (list-of-structs reader) + readParams() (activation.parameters)
- SpectrumMetadataDecoder: reads activation.parameters from precursor group
- MzPeakFileInfo: prints 'Activation methods: collision-induced dissociation: 34'
- Tests: ActivationParamsTest (CID @ 35 eV from fixture, packed ZIP, MS1 empty)

(3) Tolerance-based peak search:
- Spectrum.findPeak(mz, tol): binary search on m/z-sorted centroid list; closest within tolerance
- Spectrum.findPeaks(mz, tol): all peaks within tolerance window
- Spectrum.findPeaksBetween(lo, hi): range search
- Peaks now sorted by mz in Spectrum constructor (codex: binary search correctness)
- Tolerance: validated (non-negative, finite, non-null unit) in canonical constructor
- Tests: PeakSearchTest (7 tests covering known peaks, empty tolerance, profile spectra)

Codex review addressed: peak sort order, boolean param union arm, Activation.methods whitelist,
Tolerance validation, collisionEnergy NaN guard. 44 tests green.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>